--- a/library.html
+++ b/library.html
@@ -48,7 +48,30 @@
 										<iframe style="all: initial; width: 100%;" min-height=0 min-height=initial width="100%" id=flexible frameborder=0 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSGZSmfZ4qyDzfYdGuSMIXTc_x0EpyeaWVHfyfisGHj7OqFceRnm8eCXWAP_l9yjrIU4mUOeZqxxsEz/pubhtml?widget=false&headers=false&chrome=false">
 											
 										</iframe> 
-									 <script type="text/javascript"> document.addEventListener('DOMContentLoaded', function(event) { var iframes = iFrameResize({ log: false, // Enable console logging inPageLinks: true, heightCalculationMethod: 'bodyScroll', checkOrigin: false }); }); </script> 
+																			<style>
+											.dog{
+											transition: 0.2s;
+											}
+											.dog:hover{
+												text-transform: lowercase;
+											text-shadow: 0 0 5px #6c637c;
+
+											}
+											.cat{
+											transition: 0.2s;
+
+											}
+											.cat:hover{
+											text-shadow: 0 0 3px #726982;
+											}
+
+										</style>
+																		<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;">
+									<header class="major">   
+										<h2 class="dog">Visit the Library at <a href="https://gliese.super.site">gliese.super.site</a></h2>
+									</header>
+
+									<!-- <script type="text/javascript"> document.addEventListener('DOMContentLoaded', function(event) { var iframes = iFrameResize({ log: false, // Enable console logging inPageLinks: true, heightCalculationMethod: 'bodyScroll', checkOrigin: false }); }); </script> 
 									<script src="iframeResizer.js"></script>
 <script>
 window.addEventListener(
@@ -64,7 +87,7 @@ window.addEventListener(
   },
   false
 );
-</script>
+</script>-->
 								</section>
 
 						</div>
