--- a/staff.html
+++ b/staff.html
@@ -109,7 +109,7 @@ padding:4px;
                                         <div class="column">
                                           <div class="card">
                                             <br>
-    <img src="https://media.discordapp.net/attachments/833866530483339306/1125237894500589710/IMG_9276.jpg" class="rounded" style="border:5px solid #edb56b; margin-bottom:20px;">
+    <img src="https://media.discordapp.net/attachments/833866530483339306/1192280740340183040/IMG_4221.jpg?ex=65a880f8&is=65960bf8&hm=15d6d537024a279f804c0aad2035929452b8598a0d6a7afd6b58e3dcba778d88" class="rounded" style="border:5px solid #edb56b; margin-bottom:20px;">
                                                       <div class="container">
                                               <h2>michaela ye-hyang frey</h2>
                                               <p class="title">founder + web developer + video prod</p>
