--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 											</ul>
 										</article>
 										<article>
-											<a href="resources.html" class="image"><img src="https://i.ibb.co/4gShTJZ/image-2023-07-02-210017648.png" alt="" /></a>
-											<h2>Other resources</h2>
-											<p style="margin:10px;">Good places to think long thoughts about art.</p>										<p style="font-size: 90%"><em>art: needling whisper, needle country, kyungah ham</em></p>
+											<a href="zines.html" class="image"><img src="https://i.ibb.co/4gShTJZ/image-2023-07-02-210017648.png" alt="" /></a>
+											<h2>Zines</h2>
+											<p style="margin:10px;">Find our zines in booklet and printable form.</p>										<p style="font-size: 90%"><em>art: needling whisper, needle country, kyungah ham</em></p>
 				<ul class="actions">
 												<li><a href="resources.html" class="button">See</a></li>
 											</ul>
