--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 										<li><a href="library.html">Library</a></li>
 										<li><a href="staff.html">Staff</a></li>
 												<li><a href="mission.html">Mission</a></li>
-												<li><a href="resources.html">Resources</a></li>
+												<li><a href="zines.html">Zines</a></li>
 												</ul>
 										
 											<ul>
