--- a/library.html
+++ b/library.html
@@ -110,7 +110,7 @@ window.addEventListener(
                                     <li><a href="library.html">Library</a></li>
                                     <li><a href="staff.html">Staff</a></li>
                                             <li><a href="mission.html">Mission</a></li>
-                                            <li><a href="resources.html">Resources</a></li>
+												<li><a href="zines.html">Zines</a></li>
                                         </ul>
                                     
                                         <ul>
