--- a/zines.html
+++ b/zines.html
@@ -37,7 +37,7 @@
 									</header>
 
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<section>
+									<a id="Gliese_intro_zine"><section>
 									<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
 									">
 									<header class="major">   
@@ -68,7 +68,7 @@
 
 										</div>
 <br>
-								</section>
+								</section> </a>
 								</section>
 						</div>
 					</div>
