--- a/zines.html
+++ b/zines.html
@@ -1,17 +1,21 @@
-
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Zines - GAC</title>
+		<title>Library - GAC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-        <script src="https://kit.fontawesome.com/3626f04910.js" crossorigin="anonymous"></script>
+				<link rel="stylesheet" href="assets/css/main.css" />
+        		<script src="https://kit.fontawesome.com/3626f04910.js" crossorigin="anonymous"></script>
 		<link rel="shortcut icon" type="image/png" 
 		href="{{ "favicon.ico"  | absolute_url }}">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 	</head>
+	<style>
+		html{
+			min-height:0;
+		}
+	</style>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -33,32 +37,53 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Zines</h1>
+										<h1>Gliese Zines</h1>
 									</header>
-
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<a id="Gliese_intro_zine"><section>
-									<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
-									">
+									<span class="image main"><img src="https://i.ibb.co/xJS4tPc/dezoomify-result.jpg" alt="" /></span>
 									<header class="major">   
 										<style>
 											.dog{
 											transition: 0.2s;
 											}
-											.dog:hover{
-											text-shadow: 0 0 5px #6c637c;
-
-											}
+											
 											.cat{
 											transition: 0.2s;
 
 											}
-											.cat:hover{
-											text-shadow: 0 0 3px #726982;
-											}
+											
+										</style>
+										<style>
+											.dawwg {
+    display: block;
+    margin: 0 auto;
+    height: 40px;
+    line-height: 40px;
+    width: 300px;
+    padding: 0px 20px 0px 20px;
+    border: 1px solid red;
+}
+
+.yargh {
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-right: 40px;
+   // display:inline-block;
+}
+
+.dawgs {
+    float: right;
+    display: inline-block;
+   
+}  
+
+.my-icon{
+ line-height:40px;   
+}
 
 										</style>
-										<h2 class="dog">Gliese Art Collective: intro zine </h2>
+										<div class="yargh"><h2 class="dog dawwg">Gliese Art Collective: intro zine </h2>
+										<a href="https://gliese.arceus.day/zines.html#Gliese_intro_zine"><i class="fa-solid fa-copy dawgs my-icon"></i></a></div>
 									</header>
 										<div class="col-6 col-12-small">
 											<p class="cat">This zine talks about what we do, who we are, and what we're here for!! Click <strong><a href="https://www.canva.com/design/DAF0GpHXI88/GzejCYOVuI4k3XYo4Kos0A/view?utm_content=DAF0GpHXI88&utm_campaign=designshare&utm_medium=link&utm_source=editor">HERE</a></strong> for the online booklet!</p>
@@ -67,9 +92,9 @@
 											<p align="center"><img width=70% height=70% src="https://i.ibb.co/qY3xPmG/zine.png"></p>										</div>
 
 										</div>
-<br>
-								</section> </a>
+<br></a>
 								</section>
+
 						</div>
 					</div>
 
@@ -130,7 +155,8 @@
                         <footer id="footer" style="color: #373b52">
 <br><br><br>                            </footer>
 
-                </div>
+
+                    </div>
                 </div>
 
         </div>
@@ -142,28 +168,10 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+		<script src="iframeResizer.contentWindow.js"></script>
+<script>
+  top.postMessage('gasFrame', '*');
+</script>
+
 	</body>
-    <footer class="footer-distributed">
-
-        <div class="footer-right">
-
-            <a href="https://www.facebook.com/glieseartcollective/"><i class="fa fa-facebook"></i></a>
-            <a href="https://github.com/glieseartcollective"><i class="fa fa-github"></i></a>
-            <a href="https://instagram.com/gliese.artcollective"><i class="fa fa-instagram"></i></a>
-
-        </div>
-
-        <div class="footer-left">
-
-            <p class="footer-links">
-                <a class="link-1" href="https://gliese.arceus.day">Home</a>
-            </p>
-
-            <p>Gliese Art Collective &copy; 2023</p>
-            <br>
-            <p><a style="color:rgb(109, 109, 109)" href="mailto:gliese.artcollective@gmail.com">gliese.artcollective@gmail.com</a></p>
-        </div>
-
-    </footer>
-
 </html>
