--- a/zines.html
+++ b/zines.html
@@ -52,38 +52,10 @@
 											}
 											
 										</style>
-										<style>
-											.dawwg {
-    display: block;
-    margin: 0 auto;
-    height: 40px;
-    line-height: 40px;
-    width: 300px;
-    padding: 0px 20px 0px 20px;
-    border: 1px solid red;
-}
+		
 
-.yargh {
-    white-space: nowrap; 
-    overflow: hidden;
-    text-overflow: ellipsis;
-    margin-right: 40px;
-   // display:inline-block;
-}
-
-.dawgs {
-    float: right;
-    display: inline-block;
-   
-}  
-
-.my-icon{
- line-height:40px;   
-}
-
-										</style>
-										<div class="yargh"><h2 class="dog dawwg">Gliese Art Collective: intro zine </h2>
-										<a href="https://gliese.arceus.day/zines.html#Gliese_intro_zine"><i class="fa-solid fa-copy dawgs my-icon"></i></a></div>
+										<div><h2 class="dog">Gliese Art Collective: intro zine </h2>
+										<a href="https://gliese.arceus.day/zines.html#Gliese_intro_zine"><i class="fa-solid fa-copy"></i></a></div>
 									</header>
 										<div class="col-6 col-12-small">
 											<p class="cat">This zine talks about what we do, who we are, and what we're here for!! Click <strong><a href="https://www.canva.com/design/DAF0GpHXI88/GzejCYOVuI4k3XYo4Kos0A/view?utm_content=DAF0GpHXI88&utm_campaign=designshare&utm_medium=link&utm_source=editor">HERE</a></strong> for the online booklet!</p>
