--- a/zines.html
+++ b/zines.html
@@ -119,8 +119,8 @@ padding:4px;
 											}
 
 										</style>
-<h2 class="dog">Gliese Art Collective: intro zine </h2>
-										<a href="https://gliese.arceus.day/zines.html#Gliese_intro_zine"><i class="fa-solid fa-copy"></i></a>
+<h2 class="dog">Gliese Art Collective: intro zine <a href="https://gliese.arceus.day/zines.html#Gliese_intro_zine"><i class="fa-solid fa-copy" style="display:inline-block;"></i></a>
+ </h2>
 									</header>
 										<div class="col-6 col-12-small">
 											<p class="cat">This zine talks about what we do, who we are, and what we're here for!! Click <strong><a href="https://www.canva.com/design/DAF0GpHXI88/GzejCYOVuI4k3XYo4Kos0A/view?utm_content=DAF0GpHXI88&utm_campaign=designshare&utm_medium=link&utm_source=editor">HERE</a></strong> for the online booklet!</p>
