--- a/zines.html
+++ b/zines.html
@@ -132,6 +132,10 @@ padding:4px;
 										</script>
 										<input type="text" value="https://gliese.arceus.day/zines.html#Gliese_intro_zine" id="myInput">
 <h2 class="dog">Gliese Art Collective: intro zine <a href="https://gliese.arceus.day/zines.html#Gliese_intro_zine"><i class="fa-solid fa-copy" onclick="myFunction()" style="display:inline-block;"></i></a>
+		
+	<a href="https://glieseart.tumblr.com/post/733927555955032064/gliese-intro-zine">
+		<i class="fa fa-tumblr" style="display:inline-block;"></i>
+	</a>
  </h2>
 									</header>
 										<div class="col-6 col-12-small">
@@ -143,6 +147,59 @@ padding:4px;
 										</div>
 <br>
 								</section> </a>
+
+
+
+
+	<section>
+									<a id="Palestinian_art"><section>
+									<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+									">
+									<header class="major">   
+										<style>
+											.dog{
+											transition: 0.2s;
+											}
+											.cat{
+											transition: 0.2s;
+
+											}
+
+											#myInput{position:absolute;left:-1000px}
+
+										</style>
+										<script>
+										function myFunction() {
+  											var copyText = document.getElementById("myInput");
+ 											 copyText.select();
+ 											 document.execCommand("copy");
+ 											 alert("Copied link!");
+											}
+											
+										</script>
+										<input type="text" value="https://gliese.arceus.day/zines.html#Palestinian_art" id="myInput">
+<h2 class="dog">Palestinian Artists in History and Today: zine
+	<a href="https://gliese.arceus.day/zines.html#Gliese_intro_zine">
+		<i class="fa-solid fa-copy" onclick="myFunction()" style="display:inline-block;"></i>
+	</a>
+	
+	<a href="https://glieseart.tumblr.com/post/734428307650674688/palestinian-artists-in-history-and-today-a-zine">
+		<i class="fa fa-tumblr" style="display:inline-block;"></i>
+	</a>
+ </h2>
+									</header>
+										<div class="col-6 col-12-small">
+											<p class="cat">This zine is about how art has been essential in the fight for Palestine, and how street art, paintings, and music have supported the cause. Click <strong><a href="https://www.canva.com/design/DAF0nhtFFao/E_SwXJBITEUOGWqEwh9qDQ/view?utm_content=DAF0nhtFFao&utm_campaign=designshare&utm_medium=link&utm_source=editor">HERE</a></strong> for the online booklet!</p>
+										</div>
+										<div class="col-6 col-12-small">
+											<p align="center"><img width=70% height=70% src="https://i.ibb.co/SQRx0rF/Untitled-Artwork.jpg"></p>										</div>
+
+										</div>
+<br>
+								</section> </a>
+
+
+		
 							<!-- Content -->
 						</div>
 					</div>
