--- a/zines.html
+++ b/zines.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Staff - GAC</title>
+		<title>Zines - GAC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -165,22 +165,22 @@ padding:4px;
 
 											}
 
-											#myInput{position:absolute;left:-1000px}
+											#myInputt{position:absolute;left:-1000px}
 
 										</style>
 										<script>
-										function myFunction() {
-  											var copyText = document.getElementById("myInput");
+										function myFunctionn() {
+  											var copyText = document.getElementById("myInputt");
  											 copyText.select();
  											 document.execCommand("copy");
  											 alert("Copied link!");
 											}
 											
 										</script>
-										<input type="text" value="https://gliese.arceus.day/zines.html#Palestinian_art" id="myInput">
+										<input type="text" value="https://gliese.arceus.day/zines.html#Palestinian_art" id="myInputt">
 <h2 class="dog">Palestinian Artists in History and Today: zine
-	<a href="https://gliese.arceus.day/zines.html#Gliese_intro_zine">
-		<i class="fa-solid fa-copy" onclick="myFunction()" style="display:inline-block;"></i>
+	<a href="https://gliese.arceus.day/zines.html#Palestinian_art">
+		<i class="fa-solid fa-copy" onclick="myFunctionn()" style="display:inline-block;"></i>
 	</a>
 	
 	<a href="https://glieseart.tumblr.com/post/734428307650674688/palestinian-artists-in-history-and-today-a-zine">
@@ -193,6 +193,57 @@ padding:4px;
 										</div>
 										<div class="col-6 col-12-small">
 											<p align="center"><img width=70% height=70% src="https://i.ibb.co/SQRx0rF/Untitled-Artwork.jpg"></p>										</div>
+
+										</div>
+<br>
+								</section> </a>
+
+
+
+
+		
+	<section>
+									<a id="Comfort_women"><section>
+									<div class="content" style="background-color:#c38c44; padding:20px;border-radius: 25px; border-color: #373b52; border-style: solid; border-width:2px;
+									">
+									<header class="major">   
+										<style>
+											.dog{
+											transition: 0.2s;
+											}
+											.cat{
+											transition: 0.2s;
+
+											}
+
+											#myInputt{position:absolute;left:-1000px}
+
+										</style>
+										<script>
+										function myFunctionnn() {
+  											var copyText = document.getElementById("myInputtt");
+ 											 copyText.select();
+ 											 document.execCommand("copy");
+ 											 alert("Copied link!");
+											}
+											
+										</script>
+										<input type="text" value="https://gliese.arceus.day/zines.html#Palestinian_art" id="myInputtt">
+<h2 class="dog">The "comfort" women of Asia: art & expression, lost history, and the politics of memorial
+	<a href="https://gliese.arceus.day/zines.html#Comfort_women">
+		<i class="fa-solid fa-copy" onclick="myFunctionnn()" style="display:inline-block;"></i>
+	</a>
+	
+	<a href="https://glieseart.tumblr.com/post/738990936038817792/the-comfort-women-of-asia-a-zine">
+		<i class="fa fa-tumblr" style="display:inline-block;"></i>
+	</a>
+ </h2>
+									</header>
+										<div class="col-6 col-12-small">
+											<p class="cat">This zine memorializes through their art Asian women who were kidnapped by the Japanese Imperial army and used as sex slaves during World War II. It explores memorials, writing, and art exhibits as well as art created directly by the "comfort" women as a symbol of protest. Click <strong><a href="https://www.canva.com/design/DAF5Rsoft2g/4uGUarkiiDzRKgS69r5OMw/view?utm_content=DAF5Rsoft2g&utm_campaign=designshare&utm_medium=link&utm_source=editor">HERE</a></strong> for the online booklet!</p>
+										</div>
+										<div class="col-6 col-12-small">
+											<p align="center"><img width=70% height=70% src="https://i.ibb.co/XSJZfRD/Untitled-Artwork-5.png"></p>										</div>
 
 										</div>
 <br>
