--- a/zines.html
+++ b/zines.html
@@ -216,7 +216,7 @@ padding:4px;
 
 											}
 
-											#myInputt{position:absolute;left:-1000px}
+											#myInputtt{position:absolute;left:-1000px}
 
 										</style>
 										<script>
@@ -228,7 +228,7 @@ padding:4px;
 											}
 											
 										</script>
-										<input type="text" value="https://gliese.arceus.day/zines.html#Palestinian_art" id="myInputtt">
+										<input type="text" value="https://gliese.arceus.day/zines.html#Comfort_women" id="myInputtt">
 <h2 class="dog">The "comfort" women of Asia: art & expression, lost history, and the politics of memorial
 	<a href="https://gliese.arceus.day/zines.html#Comfort_women">
 		<i class="fa-solid fa-copy" onclick="myFunctionnn()" style="display:inline-block;"></i>
