--- a/zines.html
+++ b/zines.html
@@ -118,8 +118,10 @@ padding:4px;
 
 											}
 
-											#myInput{position:absolute;left:-1000px}
-
+											#myInput{position:absolute;left:-10000px}
+ *:focus {
+    outline: none;
+}
 										</style>
 										<script>
 										function myFunction() {
@@ -165,7 +167,7 @@ padding:4px;
 
 											}
 
-											#myInputt{position:absolute;left:-1000px}
+											#myInputt{position:absolute;left:-10000px}
 
 										</style>
 										<script>
@@ -192,7 +194,7 @@ padding:4px;
 											<p class="cat">This zine is about how art has been essential in the fight for Palestine, and how street art, paintings, and music have supported the cause. Click <strong><a href="https://www.canva.com/design/DAF0nhtFFao/E_SwXJBITEUOGWqEwh9qDQ/view?utm_content=DAF0nhtFFao&utm_campaign=designshare&utm_medium=link&utm_source=editor">HERE</a></strong> for the online booklet!</p>
 										</div>
 										<div class="col-6 col-12-small">
-											<p align="center"><img width=70% height=70% src="https://i.ibb.co/SQRx0rF/Untitled-Artwork.jpg"></p>										</div>
+											<p align="center"><img width=70% height=70% src="images/Untitled_Artwork.jpg"></p>										</div>
 
 										</div>
 <br>
@@ -216,7 +218,7 @@ padding:4px;
 
 											}
 
-											#myInputtt{position:absolute;left:-1000px}
+											#myInputtt{position:absolute;left:-10000px}
 
 										</style>
 										<script>
