--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="https://i.ibb.co/DtB2NVn/jpeg-PIA16022.jpg" alt="hubble-sees-the-force-awakening-in-a-newborn-star" />
+										<img src="images/hubble.jpeg" alt="hubble-sees-the-force-awakening-in-a-newborn-star" />
 									</span>
 								</section>
 								<section>
