--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 											<h1>A student-led community devoted to promoting accessible education and analysis of radical art history
 											</h1>
 										</header>
-										<p>We’re a group of high-school students from  Virginia who are passionate about little-known aspects of art history — the offshoots of the common narrative.
+										<p>We’re a group of high-school students from Virginia (and a 501(c)3) who are passionate about little-known aspects of art history — the offshoots of the common narrative.
 										</p><p>
 											Our goal is to provide free, accessible, and original resources to students about the history of cultural and radical art, music, and movements. 
 											
