--- a/staff.html
+++ b/staff.html
@@ -152,6 +152,7 @@ padding:4px;
                                               <p>contact me @ <a href="mailto:axr1234@gmail.com">axr1234@gmail!</a></p>
                                             </div>
                                           </div>
+					</div>
 
                                         <div class="column">
                                           <div class="card">
