--- a/staff.html
+++ b/staff.html
@@ -112,7 +112,7 @@ padding:4px;
     <img src="images/micha.jpg" class="rounded" style="border:5px solid #edb56b; margin-bottom:20px;">
                                                       <div class="container">
                                               <h2>michaela ye-hyang frey</h2>
-                                              <p class="title">president + zinemaker + video prod</p>
+                                              <p class="title">president + zinemaker + web dev</p>
                                               <p>hi! i'm a junior at langley high school. i draw, code, write, and play violin. i really like the solarpunk genre and am currently reading <a href="https://www.goodreads.com/book/show/51343027-underground-asia?from_search=true&from_srp=true&qid=GENuZbSW4w&rank=1"><em>Underground Asia: Global Revolutionaries and the Assault on Empire
 
 </em> by tim harper</a> </p>
